# embedded_utils

./: .gitignore  CMakeLists.txt  CppCheckSuppressions.txt  README.md  codecov.yml  embedded_utils.code-workspace  linux.cmake
.github/workflows/: cmake.yml
cmake/: cppcheck.cmake  gnuc_ext_defs.hpp.in  linux.cmake
coverage/: coverage.json  coverage.xml  index.bitset_utils.hpp.552a871ba0c5eb064a53f343eda3618d.html  index.byte_utils.hpp.96553195beb912b48c3f3ce1687fad87.html  index.css  index.functions.html  index.html  index.i2c_utils.cpp.2a100f8642aabe4f988fc22f1cb4550a.html  index.restricted_base.cpp.3d53415087ce8027f33d1657b6c5ab7f.html  index.spi_utils.cpp.0b843adc24f537b804a055b1574eb6bb.html  index.static_bitset.hpp.ca6ce2216f990f318049ba694c7e20a9.html  index.static_map.hpp.b87d8dee2ca7409875704c30a8ddfae4.html  index.static_string.hpp.6c9db461dc02a60ea5b04294a7e26dad.html  index.timer_manager.cpp.6c5b9bc07fe48d1b5672e7e687347caf.html  index.usart_utils.cpp.073670dbc792d2839e8ca4034c3d5014.html
inc/: ControlledBase.hpp  allocation_restricted_base.hpp  bitset_utils.hpp  byte_utils.hpp  i2c_utils.hpp  interrupt_base.hpp  interrupt_manager_base.hpp  ll_i2c_utils.hpp  ll_spi_utils.hpp  ll_tim_utils.hpp  restricted_base.hpp  spi_utils.hpp  static_map.hpp  static_string.hpp  timer_manager.hpp  usart_utils.hpp
inc/stm32_isr/: isr_manager_base_stm32g0.hpp
include/: bitset_utils.hpp  byte_utils.hpp  i2c_utils.hpp  i2c_utils_ref.hpp  restricted_base.hpp  spi_utils.hpp  spi_utils_ref.hpp  static_bitset.hpp  static_map.hpp  static_string.hpp  timer_manager.hpp  usart_utils.hpp
lib/inc/: i2c_utils.hpp  timer_manager.hpp  usart_utils.hpp
lib/src/: restricted_base.cpp  timer_manager.cpp  usart_utils.cpp
src/: CMakeLists.txt  ControlledBase.cpp  allocation_restricted_base.cpp  i2c_utils.cpp  i2c_utils_ref.cpp  interrupt_base.cpp  interrupt_manager_base.cpp  ll_i2c_utils.cpp  ll_spi_utils.cpp  restricted_base.cpp  spi_utils.cpp  spi_utils_ref.cpp  timer_manager.cpp  usart_utils.cpp
src/stm32_isr/: isr_manager_base_stm32g0.cpp
tests/: CMakeLists.txt  README.md  catch_bitset_utils.cpp  catch_byte_utils.cpp  catch_common.cpp  catch_common.hpp  catch_i2c_utils.cpp  catch_main_app.cpp  catch_spi_utils.cpp  catch_static_bitset.cpp  catch_static_map.cpp  catch_static_string.cpp  catch_timer_manager.cpp  catch_timer_manager.hpp  catch_usart_utils.cpp  mock_cmsis.hpp
tests/mocks/: mock.hpp  mock_fuse.cpp  mock_fuse.hpp  mock_i2c.cpp  mock_i2c.hpp  mock_spi.hpp  mock_stm32g0b1xx_defs.hpp  mock_tim.cpp  mock_tim.hpp
